[tool.poetry]
name = "asu"
version = "0.0.0"
description = "A firmware on demand server for OpenWrt based distributions"
authors = ["Paul Spooren <mail@aparcar.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = { extras = ["standard"], version = "^0.119.0" }
pynacl = "^1.6.0"
podman = "^5.6.0"
redis = "^6.4.0"
pydantic-settings = "^2.10.1"
rq = "^2.6.0"
uvicorn = "^0.37.0"
fastapi-cache2 = "^0.2.2"
httpx = "^0.28.1"
hishel = "^0.1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
ruff = "^0.14.2"
coverage = "^7.10.6"
isort = "^7.0.0"
fakeredis = "^2.32.0"
pytest-httpserver = "^1.1.3"


[tool.coverage.run]
dynamic_context = "test_function"

[tool.coverage.report]
precision       = 1

[tool.coverage.html]
show_contexts   = "true"
title           = "ASU Server Regression Test Coverage"


[tool.pytest.ini_options]
testpaths = [
    "tests"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
